--- a/Rfactor_Auth.Server/appsettings.json
+++ b/Rfactor_Auth.Server/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServer": "https://localhost:7131/"
 }
