--- a/rfactor_auth.client/package.json
+++ b/rfactor_auth.client/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-native-config": "^1.5.3"
+    "react-native-config": "^1.5.3",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
