--- a/VoiceAuthentification/VoiceAuthentification.csproj
+++ b/VoiceAuthentification/VoiceAuthentification.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -18,6 +18,11 @@
     <PackageReference Include="OxyPlot.Pdf" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
+    <PackageReference Include="Vosk" Version="0.3.38" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="VoskModel\" />
   </ItemGroup>
 
 </Project>
