--- a/rfactor_auth.client/package.json
+++ b/rfactor_auth.client/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.115.0",
+    "@react-three/fiber": "^8.17.10",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-native-config": "^1.5.3",
     "react-router-dom": "^6.27.0"
