очень много все

--- a/IdentityServer/appsettings.json
+++ b/IdentityServer/appsettings.json
@@ -5,5 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "VoiceUrl": "https://localhost:7117",
+  "ImageUrl": "https://localhost:7131/",
+
+  //"Kestrel": {
+  //  "Endpoints": {
+  //    "Http": {
+  //      "Url": "http://*:8080"
+  //    },
+  //    "Https": {
+  //      "Url": "https://*:8443",
+  //      "Certificate": {
+  //        "Path": "server.pfx",
+  //        "Password": "56039141"
+  //      }
+  //    }
+  //  }
+  //}
 }
