--- a/Rfactor_Auth.Server/appsettings.json
+++ b/Rfactor_Auth.Server/appsettings.json
@@ -6,5 +6,15 @@
     }
   },
   "AllowedHosts": "*",
-  "IdentityServer": "https://localhost:7131/"
+  "IdentityServer": "https://localhost:7131/",
+
+  "JwtSettings": {
+    "Key": "vYaN72G7QBCmEqmP04TiJKYFYhaO4+72ZJ2tBdZtBmc=",
+    "Issuer": "https://",
+    "Audience": "https://",
+    "ExpiryMinutes": 5,
+    "Algorithm": "HS256"
+  }
+
+
 }
