--- a/VoiceAuthentification/appsettings.json
+++ b/VoiceAuthentification/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EncryptionSettings": {
+    "Key": "U3h8b0xGZXc5Z1VvZnR3RzloeW9EdHczQml5Z2h6ZGk=",
+    "IV": "VWpRb1pxUHdZZ0ZKUnM0Yw==",
+    "EncryptedKey": "A7dG8k1mF2rT3qK9vXz6bYlP4eS7nC2W"
+  }
 }
