--- a/VoiceAuthentification/VoiceAuthentification.csproj
+++ b/VoiceAuthentification/VoiceAuthentification.csproj
@@ -13,14 +13,11 @@
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="NAudio" Version="2.2.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NWaves" Version="0.9.6" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     <PackageReference Include="System.Drawing.Common" Version="8.0.10" />
     <PackageReference Include="Vosk" Version="0.3.38" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="VoskModel\" />
   </ItemGroup>
 
 </Project>
