--- a/rfactor_auth.client/package.json
+++ b/rfactor_auth.client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-lottie-player": "^2.1.0",
     "react-native-config": "^1.5.3",
     "react-router-dom": "^6.27.0"
   },
